--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.27.2",
     "element-plus": "^2.2.0",
+    "table-xlsx": "^0.1.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
